--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <head>
+  <link rel="stylesheet" type="text/css" href="./dist/main.css">
   <script src="./dist/main.js"></script>
 </head>
 <body>
