added autoprefixer and tested

--- a/index.html
+++ b/index.html
@@ -8,4 +8,5 @@
   <h2>This is a tagline.</h2>
   <p>This is a line of text that will start a paragraph. This is a line of text that will be the second sentence in a paragraph. The is the last line of a paragraph with a <span>call to action</span>.</p>
   <button>Do things!</button>
+  <div class="image"></div>
 </body>
