Before twig shenanigans

--- a/index.html
+++ b/index.html
@@ -1,12 +1,65 @@
 <!DOCTYPE html>
-<head>
-  <link rel="stylesheet" type="text/css" href="./dist/main.css">
-  <script src="./dist/main.js"></script>
-</head>
-<body>
-  <h1>Hello world!</h1>
-  <h2>This is a tagline.</h2>
-  <p>This is a line of text that will start a paragraph. This is a line of text that will be the second sentence in a paragraph. The is the last line of a paragraph with a <span>call to action</span>.</p>
-  <button>Do things!</button>
-  <div class="image"></div>
-</body>
+<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
+<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
+<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
+<!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title></title>
+    <meta name="description" content="">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://fonts.googleapis.com/css?family=Bellota+Text|Roboto&display=swap" rel="stylesheet">
+    <link href="dist/main.css" rel="stylesheet">
+  </head>
+  <body>
+    <!--[if lt IE 7]>
+      <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
+    <![endif]-->
+    <header>
+      <nav>
+        <ul>
+          <li><a href="#"><img src="https://svgsilh.com/svg/304875.svg" alt="Mai Healing Arts water lily logo" style="max-width: 50px; height: auto;"></a></li>
+          <li><a href="#">Dashboard</a></li>
+          <li><a href="#">Team</a></li>
+          <li><a href="#">Projects</a></li>
+          <li><a href="#">Calendar</a></li>
+          <li><a href="#">Contact</a></li>
+        </ul>
+      </nav>
+    </header>
+    <main>
+      <div class="heroHome" style="background-image: url(https://images.unsplash.com/uploads/14122810486321888a497/1b0cc699?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1351&q=80);">
+        <article>
+          <h1>Mai Enrichment Center</h1>
+          <h2>Enrich your life and heal your soul by creating earth art at our healing center</h2>
+        </article>
+      </div>
+    </main>
+    <footer>
+      <div class="resources">
+        <section>
+          <h3>Contact Us</h3>
+          <ul>
+            <li>
+              <a href="tel:#">555-555-5555</a>
+            </li>
+            <li>
+              <a href="mail:#">info@maienrichment.net</a>
+            </li>
+          </ul>
+        </section>
+        <section>
+          <h3>Location &amp; Directions</h3>
+          <p>
+            <span>Mai Enrichment Center</span>
+            10073 Manchester Rd, Suite 100 St. Louis, MO 63122
+          </p>
+          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d779.4652138035921!2d-90.38697761583444!3d38.606072759448985!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x87d8cc6447eb1651%3A0xab782da8130b4e67!2s10073%20Manchester%20Rd%20%23100%2C%20St.%20Louis%2C%20MO%2063122!5e0!3m2!1sen!2sus!4v1584035828306!5m2!1sen!2sus" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+        </section>
+      </div>
+      <section>&copy; 2020 Mai Enrichment Center, LLC</section>
+    </footer>
+    <script src="./dist/main.js" async defer></script>
+  </body>
+</html>
